2001-04-25  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* added packages/alsa/src/alsarawmidiport.c (that contains a ALSA raw midi port...)

	* remove fts/src/runtime/devices/null.c and fts/src/runtime/devices/profdev.c: no longer used

	* added profileaudioport (in package io). It outputs on its outlet
	the estimated sample rate.

	* changed the default audio port mechanism: now the default audio
	port is defined by a variable (DefaultAudioPort). This way, the
	default audio port can be set from a patch (we are moving slowly
	to configuration done by patches). Also changed the nullaudioport
	mechanism (still a little bit ugly).

2001-04-10  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* finalized scope and vector display
	* moved scope and vector display to guiobj package

2001-04-06  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* added oscilloscope

2001-04-03  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* added vector display object to guiobj package and client sources (includiong images)

	* added cut~ and scope~ to signal package

2001-03-30  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* java/src/ircam/jmax/editors/patcher/objects/Display.java: bug
	fix: display objects doesn't set patcher to dirty anymore

	* fts/src/runtime/devices/bytestream.c: bug fix: bytestream
	listener can now remove itself

2001-03-29  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* added package macosx, containing HAL audio port for Mac OS X

2001-03-27  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* packages/ispw/src/sampling/tabpeek.c (ftl_tabpeek): fixed ugly
	bug crashing on DSP on while ISPW signal help summary patch is open

	* doc/ReleaseNotes.html : added summary of the latest updates to the release notes

2001-03-22  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* fixed: hack for default MIDI port.

	* cleaned: documentation (installation, configuration)

2001-03-21  Francois Dechelle  <dechelle@lipari.ircam.fr>

	* added: package sgi, containing SGI audio port
