@@ -1,3 +1,7 @@
+2001-04-27  Norbert Schnell  <schnell@ligeti.ircam.fr>
+
+	* added Wacom V (Intous) support to packages/io/c/src/wacom.c
+
 2001-04-25  Francois Dechelle  <dechelle@lipari.ircam.fr>
 
 	* added packages/alsa/src/alsarawmidiport.c (that contains a ALSA raw midi port...)
